--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@vercel/analytics": "^1.3.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.11.0",
+    "canvas": "^3.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -65,6 +66,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sanitize-html": "^2.17.0",
+    "sharp": "^0.34.5",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
