--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.11.0",
     "canvas": "^3.2.0",
+    "cheerio": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -65,6 +66,7 @@
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
+    "rss-parser": "^3.13.0",
     "sanitize-html": "^2.17.0",
     "sharp": "^0.34.5",
     "sonner": "^1.7.1",
