--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,12 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+
+    // ✅ FIX START
+    "jsx": "react-jsx",
+    "jsxImportSource": "react",
+    // ✅ FIX END
+
     "incremental": true,
     "plugins": [
       {
@@ -22,6 +27,12 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "public/firebase-messaging-sw.js"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "public/firebase-messaging-sw.js"
+  ],
   "exclude": ["node_modules"]
 }
