--- a/public/fevicons/manifest.json
+++ b/public/fevicons/manifest.json
@@ -12,19 +12,19 @@
   "dir": "ltr",
   "icons": [
     {
-      "src": "/favicon/favicon-192x192.png",
+      "src": "/favicon/icon1.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "/favicon/favicon-512x512.png",
+      "src": "/favicon/icon1.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "/favicon/apple-touch-icon.png",
+      "src": "/favicon/icon1.png",
       "sizes": "180x180",
       "type": "image/png"
     }
@@ -41,19 +41,19 @@
       "name": "Latest Jobs",
       "short_name": "Jobs",
       "url": "/jobs",
-      "icons": [{ "src": "/favicon/favicon-192x192.png", "sizes": "192x192" }]
+      "icons": [{ "src": "/favicon/icon1.png", "sizes": "192x192" }]
     },
     {
       "name": "Results",
       "short_name": "Results",
       "url": "/results",
-      "icons": [{ "src": "/favicon/favicon-192x192.png", "sizes": "192x192" }]
+      "icons": [{ "src": "/favicon/icon1.png", "sizes": "192x192" }]
     },
     {
       "name": "Admit Cards",
       "short_name": "AdmitCards",
       "url": "/admit-card",
-      "icons": [{ "src": "/favicon/favicon-192x192.png", "sizes": "192x192" }]
+      "icons": [{ "src": "/favicon/icon1.png", "sizes": "192x192" }]
     }
   ]
 }
