--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "prebuild": "node scripts/generate-job-images.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -12,7 +13,6 @@
   "dependencies": {
     "@emotion/is-prop-valid": "^1.2.1",
     "@hookform/resolvers": "^3.9.1",
-
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -40,10 +40,9 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
-
     "@vercel/analytics": "^1.3.1",
-
     "axios": "^1.11.0",
+    "canvas": "^3.2.0",
     "cheerio": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -55,16 +54,14 @@
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-
     "next": "^15.1.3",
     "next-pwa": "^5.6.0",
     "next-seo": "^6.8.0",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.4",
-
     "react": "18.3.1",
-    "react-dom": "18.3.1",
     "react-day-picker": "9.8.0",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.54.1",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
@@ -75,7 +72,6 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-
     "vaul": "0.9.6",
     "zod": "^3.24.1"
   },
