--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-   
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -68,6 +67,7 @@
     "rss-parser": "^3.13.0",
     "sanitize-html": "^2.17.0",
     "sharp": "^0.34.5",
+    "slugify": "^1.6.6",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
